--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Vanimation</title>
   </head>
   <body>
-    <svg id="svgcanvas" width = "750" height = "750" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg><br>
+    <svg id="svgcanvas" width = "750" height = "750" xmlns="http://www.w3.org/2000/svg"></svg><br>
     <button id="grow">Grow</button>
     <button id="bounce">Bounce</button>
     <button id="stop">Stop</button>
